# juriscraper

./: .gitattributes  .pre-commit-config.yaml  pyproject.toml  sample_caller.py  tox.ini
.beads/: issues.jsonl
docs/: Makefile  README.md
docs/data/: AGENTS.md  courts.toml
docs/data/site_reports/: 6dca.flcourts.gov.toml  _TEMPLATE.toml  ag.ks.gov.toml  ago.nebraska.gov.toml  coa.nmcourts.gov.toml  coag.gov.toml  courts.alaska.gov.toml  courts.delaware.gov.toml  courts.ky.gov.toml  courts.mi.gov.toml  courts.ms.gov.toml  courts.mt.gov.toml  courts.oregon.gov.toml  docs.legis.wisconsin.gov.toml  fptc.org.toml  judicial.alabama.gov.toml  lafcca.hosted2.civiclive.com.toml  millelacsband.com.toml  mtab.mt.gov.toml  nebraskajudicial.gov.toml  nvcourts.gov.toml  oag.ca.gov.toml  oag.maryland.gov.toml  oha.ed.gov.toml  ohiocourtofclaims.gov.toml  opinions.arcourts.gov.toml  search.txcourts.gov.toml  supremecourt.gov.toml  supremecourt.nmcourts.gov.toml  texasattorneygeneral.gov.toml  wcc.state.ct.us.toml  www.ag.ny.gov.toml  www.ag.state.la.us.toml  www.ago.mo.gov.toml  www.arkansasag.gov.toml  www.atg.wa.gov.toml  www.awcc.state.ar.us.toml  www.azcourts.gov.toml  www.cherokeecourts.org.toml  www.colorado.gov.toml  (+60 more)
docs/source/: conf.py  index.rst
docs/source/_ext/: __init__.py  court_coverage.py  site_reports.py
docs/source/_generated/: court_registry.toml
docs/source/_templates/: federal_coverage.svg.jinja2  state_coverage.svg.jinja2
docs/source/api/: index.rst
docs/source/courts/: ak.rst  al.rst  ar.rst  as.rst  az.rst  ca.rst  ca1.rst  ca10.rst  ca11.rst  ca2.rst  ca3.rst  ca4.rst  ca5.rst  ca6.rst  ca7.rst  ca8.rst  ca9.rst  cadc.rst  co.rst  ct.rst  dc.rst  de.rst  federal.rst  fl.rst  ga.rst  gu.rst  hi.rst  ia.rst  id.rst  il.rst  in.rst  index.rst  ks.rst  ky.rst  la.rst  ma.rst  md.rst  (+33 more)
juriscraper/: AbstractSite.py  ClusterSite.py  OpinionSite.py  WebDriven.py
juriscraper/fdsys/: FDSysSite.py
juriscraper/lasc/: http.py
juriscraper/lib/: auth_utils.py  date_utils.py  exceptions.py  html_utils.py  microservices_utils.py  network_utils.py  string_utils.py  test_utils.py  utils.py
juriscraper/opinions/: opinion_template.py
juriscraper/oral_args/: oral_argument_template.py
juriscraper/pacer/: acms_attachment_page.py  acms_docket.py  appellate_attachment_page.py  appellate_docket.py  attachment_page.py  case_query.py  case_query_advanced.py  claims_activity.py  claims_register.py  docket_history_report.py  docket_report.py  download_confirmation_page.py  email.py  free_documents.py  hidden_api.py  http.py  internet_archive.py  list_of_creditors.py  mobile_query.py  reports.py  rss_feeds.py  utils.py
juriscraper/scotus/: scotus_docket_report.py  scotus_docket_report_htm.py  scotus_docket_report_html.py  scotus_email.py
juriscraper/scraper_driver/: data_types.py
scripts/: build_court_registry.py  generate_coverage_maps.py  svg_paths.py  sync_courts_db.py
tests/: __init__.py
tests/local/: test_DateTest.py  test_ScraperSpotTest.py
tests/network/: test_PacerCaseQueryTest.py  test_PacerDocketReportTest.py
tests/scraper_driver/: conftest.py  test_02_navigating_request.py  test_03_nonnavigating_request.py  test_04_archive_request.py  test_05_accumulated_data.py  test_06_aux_data.py  test_07_callbacks.py  test_08_structural_errors.py  test_09_data_validation.py  test_10_transient_exceptions.py  test_11_interceptor_pattern.py  test_12_rate_limiting.py  test_13_archive_callback.py  test_14_lifecycle_hooks.py  test_15_priority_queue.py  test_16_deduplication.py  test_17_warc_interceptors.py  test_18_permanent_data.py  test_19_step_decorators.py  test_async_driver.py  test_consumer_model_compliance.py  test_searchable_fields.py  test_stop_event.py  utils.py
(+316 files in other folders)
