[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "juriscraper"
version = "2.7.0"
description = "An API to scrape American court websites for metadata."
readme = "README.rst"
keywords = [ "scraping", "legal", "pacer" ]
license = " BSD-2-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Free Law Project", email = "info@free.law" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

urls.Repository = "https://github.com/freelawproject/juriscraper"

dependencies = [
  "certifi>=2017.4.17",
  "chardet>=3.0.2",
  "charset-normalizer>=3.1.0",
  "cssselect",
  "dateparser>=1.2.0",
  "feedparser>=6.0.11",
  "geonamescache>=2.0.0",
  "html5lib",
  "httpx>=0.28.1",
  "lxml>=5.2",
  "nh3",
  "pydantic>=2.12.5",
  "python-dateutil>=2.8.2",
  "requests>=2.20.0",
  "selenium>=4.9.1",
  "tldextract",
  "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
  "jsondate3-aware",
  "jinja2",
  "pytest",
  "pytest-asyncio>=0.24.0",
  "mypy>=1.19.0",
  "types-certifi",
  "types-python-dateutil>=2.9.0.20251115",
  "types-requests>=2.32.4.20250913",
  "types-lxml>=2025.11.25",
  "types-selenium",
  "responses>=0.25.8",
  "ty>=0.0.9",
  "aiohttp>=3.13.3",
  "warcio>=1.7.5",
  "pyrate-limiter>=3.9.0",
  "tomli>=2.0.0;python_version<'3.11'",
  "tomli-w>=1.2.0",
  "sphinx>=7.4.7",
  "sphinxcontrib-mermaid>=1.2.3",
  "sphinx-rtd-theme>=0.5.1",
  "sphinx-autobuild>=2024.10.3",
  "types-docutils>=0.22.3.20251115",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Warnings from external libraries we can't fix
    "ignore:'count' is passed as positional argument:DeprecationWarning",
    "ignore:tzname .* identified but not understood:dateutil.parser.UnknownTimezoneWarning",
    "ignore:Parsing dates involving a day of month without a year:DeprecationWarning",
    "ignore:Unverified HTTPS request:urllib3.exceptions.InsecureRequestWarning",
    "ignore:Setting per-request cookies=:DeprecationWarning",
]

[tool.setuptools]


[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 79
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
  # printf-string-formatting
  "UP031",
]

[tool.mypy]
# Packages without type stubs
[[tool.mypy.overrides]]
module = [
  "charset_normalizer",
  "dateparser",
  "feedparser",
  "geonamescache",
  "jsondate3",
  "nh3",
  "requests.packages",
  "requests.packages.urllib3",
  "requests.packages.urllib3.*",
  "responses",
  "tldextract",
  "urllib3.*",
]
ignore_missing_imports = true
